# lean-md

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  INSTALL.md  LICENSE  README.md  TODO.md  lean-ctx-addon.toml  lean-md-next-session.prompt.md  rust-toolchain.toml
.cargo/: config.toml
.claude/rules/: subagent-multi-agent.md
.config/: nextest.toml
.githooks/: guard-plans-on-main.sh  skills-pack-drift.sh
.github/workflows/: pack-drift.yml  release.yml
benchmarks/skill-token-comparison/: README.md  SUMMARY.md  harness.rs  main.rs
benchmarks/skill-token-comparison/scenarios/: 01-sunk-cost-time-exhaustion.md  (+1 more)
content/: seeds.sha256  skills.ctxpkg-hash  skills.sha256
content/core/: dispatch-contract.lmd.md  hard-rules.lmd.md
content/gloss/: directives.lmd.md
content/lang/: rust.lmd.md
content/templates/: dispatch-contract.ext.lmd.md  hard-rules.ext.lmd.md  parallel-dispatch.ext.lmd.md  plan-recipes.lmd.md  plan-template.lmd.md
content/tooling/: availability-audit.md  mcp-tools.lmd.md
docs/: 21-lean-md.md  CONTRACT.md  RELEASING.md  appendix-lean-md.md  dev-readme.md
src/: arg_schema.rs  args.rs  audit.rs  auto_findings.rs  availability.rs  backend.rs  crp.rs  crp_proto.rs  crp_schema.rs  engine.rs  fragments.rs  gloss.rs  hashx.rs  header.rs  lib.rs  lock.rs  macros.rs  mod.rs  node.rs  pathx.rs  phases.rs  render.rs  seeds.rs  signatures.rs  skill_install.rs  skill_source.rs  skill_vars.rs  skills.rs  test_env.rs  version_gate.rs
src/bridges/: addressing.rs  architecture.rs  call.rs  checkpoint.rs  compress.rs  count.rs  date.rs  dispatch.rs  edit.rs  env.rs  find.rs  graph.rs  handoff.rs  impact.rs  include.rs  inspect.rs  list.rs  mod.rs  outline.rs  query.rs  read.rs  recall.rs  refactor.rs  reformat.rs  remember.rs  render.rs  repomap.rs  review.rs  routes.rs  search.rs  smells.rs  symbol.rs  var.rs
src/parser/: block.rs  inline.rs  mod.rs
tests/: addon_roundtrip.rs  backend_parity.rs  check_exit.rs  determinism.rs  dispatch_contract.rs  list_phases.rs  mcp_tool_alias.rs  pack_drift.rs  sdd_recipes.rs  seed_history.rs  skill_token_comparison.rs  source_verb.rs  standalone.rs  whole_doc_import.rs
(+125 files in other folders)
