[package]
name = "lean-md"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"
description = "Macro/directive markdown renderer for lean-ctx context engineering."
homepage = "https://github.com/dasTholo/lean-md"
include = ["src/**/*.rs", "content/**/*.lmd.md", "content/**/*.md", "Cargo.toml", "README.md", "INSTALL.md", "LICENSE", "docs/CONTRACT.md"]

[lib]
name = "lean_md"
path = "src/lib.rs"

[[bin]]
name = "lean-md"
path = "src/bin/lean_md.rs"

[dependencies]
rushdown = "0.18"
evalexpr = "13.1"
serde_json = "1.0"
regex = "1"
chrono = "0.4"
# McpBackend only — optional, behind `mcp` feature. Standalone crate (does NOT
# link the lean_ctx engine — only ureq/serde/thiserror), so the null-lean_ctx
# invariant holds. Local path for now; git/crates.io switch lands in P4 (dist).
lean-ctx-client = { path = "/home/tholo/Scripts/lean-ctx/clients/rust/lean-ctx-client", optional = true }

[features]
default = []
mcp = ["dep:lean-ctx-client"]
