[package]
name = "lean-md"
version = "0.2.0"
edition = "2024"
rust-version = "1.97"
license = "Apache-2.0"
description = "Macro/directive markdown renderer for lean-ctx context engineering."
homepage = "https://github.com/dasTholo/lean-md"
repository = "https://github.com/dasTholo/lean-md"
include = ["src/**/*.rs", "content/**/*.lmd.md", "content/**/*.md", "Cargo.toml", "README.md", "INSTALL.md", "LICENSE", "docs/CONTRACT.md"]

[lib]
name = "lean_md"
path = "src/lib.rs"

[[bin]]
name = "lean-md"
path = "src/bin/lean_md.rs"

[dependencies]
rushdown = "0.18"
evalexpr = "13.1"
serde_json = "1.0"
regex = "1.13"
chrono = "0.4"
# McpBackend only — optional, behind `mcp` feature. Standalone crate (does NOT
# link the lean_ctx engine — only ureq/serde/thiserror), so the null-lean_ctx
# invariant holds. Published on crates.io (P0 dist switch).
lean-ctx-client = { version = "0.1", optional = true }

[features]
default = []
mcp = ["dep:lean-ctx-client"]

[dev-dependencies]
tiktoken-rs = "0.12"
sha2 = "0.10"

[[example]]
name = "skill-token-comparison"
path = "benchmarks/skill-token-comparison/main.rs"
